(library
 (name wamr)
 (libraries libwamr.c)
 (flags
  (:standard -w -9-27-33))
 (ctypes
  (external_library_name wamr)
  (headers
   (preamble "#include \"wasm_export.h\""))
  (type_description
   (instance Type)
   (functor Wamr_type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Wamr_function_description))
  (generated_types Types_generated)
  (generated_entry_point Wamr)))

(test
 (name test)
 (modules test)
 (libraries wamr)
 (action
  (run %{test})))
