(executable
 (name test)
 (libraries libwamr)
 (flags
  (:standard -w -9-27-33))
 (ctypes
  (external_library_name libwamr_c)
  (headers
   (preamble "#include \"%{lib:libwamr:wasm_export.h}\""))
  (type_description
   (instance Type)
   (functor Wamr_type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Wamr_function_description))
  (generated_types Types_generated)
  (generated_entry_point Wamr)))

(rule
 (alias runtest)
 (action
  (run ./test.exe)))
